# lib_Instrument_Tools

./: README.md  协议抓取.log~
RemotePlatform/: README.md  (+3 more)
RemotePlatform/baseability/: CMakeLists.txt  build.gradle
RemotePlatform/baseability/src/androidTest/java/com/coocaa/remoteplatform/baseability/: ExampleInstrumentedTest.java
RemotePlatform/baseability/src/main/: AndroidManifest.xml
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/: BaseAbilityClient.java  BaseAbilityImpl.java  IBaseAbility.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/abilities/: AbilityFactory.java  AbsAbility.java  IAbility.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/abilities/deviceinfo/: DeviceInfoImpl.java  ReportInfo.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/abilities/file/: FileImpl.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/abilities/logcat/: LogcatImpl.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/abilities/reboot/: Reboot.java  RebootAlarmBroadcastReceiver.java  RebootImpl.java
RemotePlatform/baseability/src/main/java/com/coocaa/remoteplatform/baseability/common/: DeviceInfoUtils.java  FileUtils.java
RemotePlatform/baseability/src/main/jni/: CMakeLists.txt  termux.c
RemotePlatform/baseability/src/main/jni/rtc/: CMakeLists.txt  rtc.cpp
RemotePlatform/baseability/src/test/java/com/coocaa/remoteplatform/baseability/: ExampleUnitTest.java
(+401 files in other folders)
